# BLDC-Driver-and-Application

./: LICENSE  README.md
1.Hardware/: BLDC_DRIVER.PrjPcb  DRIVE.SchDoc  MCU.SchDoc  PCB.PcbDoc  PORT.SchDoc  POWER.SchDoc  SENSOR.SchDoc
1.Hardware/Gerber/: PCB-macro.APR_LIB  PCB.DRR  PCB.GBL  PCB.GBP  PCB.GD1  PCB.GG1  PCB.GM13  PCB.GM15  PCB.GM16  PCB.GM2  PCB.GM23  PCB.GM24  PCB.GM3  PCB.GM5  PCB.GM6  PCB.GPT  PCB.GTS  PCB.LDP  PCB.TXT  PCB.apr
1.Hardware/Mechanism/: Drawing Robot Assembly.STEP
1.Hardware/PCB/Gerber/: PCB.EXTREP  PCB.GBO  PCB.GBS  PCB.GM1  PCB.GM20  PCB.GM21  PCB.GPB  PCB.GTL  PCB.GTO  PCB.GTP  PCB.REP  PCB.RUL  Status Report.Txt
2.Firmeware/.metadata/: .log4j.xml  version.ini
2.Firmeware/.metadata/.plugins/org.eclipse.cdt.core/: BLDC_DRIVER.1669017860370.pdom  EVB_Demo1_ADC_I2C_PWM_CLCD_BSM_Test.language.settings.xml  pwm.language.settings.xml  pwm_out_example.language.settings.xml
2.Firmeware/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
2.Firmeware/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
2.Firmeware/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
2.Firmeware/BLDC_DRIVER/: .cproject  BLDC_DRIVER.ioc
2.Firmeware/BLDC_DRIVER/Core/Inc/: bldc_driver.hpp  magnetic_sensor.hpp  main.h
2.Firmeware/BLDC_DRIVER/Core/Src/: bldc_driver.cpp  magnetic_sensor.cpp  main.c  (+2 more)
2.Firmeware/BLDC_DRIVER/Debug/: BLDC_DRIVER.elf  BLDC_DRIVER.list  BLDC_DRIVER.map  makefile
2.Firmware/.metadata/: .log4j.xml  version.ini
2.Firmware/BLDC_DRIVER/: .cproject  .mxproject  .project  BLDC_DRIVER.ioc
2.Firmware/BLDC_DRIVER/Debug/: BLDC_DRIVER.elf  BLDC_DRIVER.list  BLDC_DRIVER.map  makefile  objects.list  sources.mk
2.Firmware/BLDC_SENSOR_DRIVER/: .cproject  .mxproject  .project  BLDC_SENSOR_DRIVER.ioc
2.Firmware/BLDC_SENSOR_DRIVER/Debug/: BLDC_SENSOR_DRIVER.elf  BLDC_SENSOR_DRIVER.list  BLDC_SENSOR_DRIVER.map  makefile  objects.list
2.Firmware/CAMERA_BLDC/: .cproject  .project  CAMERA_BLDC.ioc
2.Firmware/CAMERA_BLDC/Debug/: CAMERA_BLDC.elf  CAMERA_BLDC.list  CAMERA_BLDC.map  makefile  objects.list
2.Firmware/MAGNETIC_SENSOR/: .cproject  .mxproject  .project  MAGNETIC_SENSOR.ioc
2.Firmware/MAGNETIC_SENSOR/Debug/: MAGNETIC_SENSOR.elf  MAGNETIC_SENSOR.list  MAGNETIC_SENSOR.map  makefile  objects.list
2.Firmware/UART_JUDGEMENT/: .cproject  .mxproject  .project  UART_JUDGEMENT.ioc
2.Firmware/UART_MASTER/: .cproject  .mxproject  .project  UART_MASTER.ioc
2.Firmware/UART_MASTER/Debug/: UART_MASTER.elf  UART_MASTER.list  UART_MASTER.map  makefile
3.Software/: CMakeLists.txt
3.Software/data/: 0_012_1.csv  0_012_2.csv  0_020_1.csv  0_020_2.csv  0_036_1.csv  0_036_2.csv  0_052_1.csv  0_052_2.csv  0_068_1.csv  0_068_2.csv  0_084_1.csv  0_084_2.csv  0_100_1.csv  0_100_2.csv  0_117_1.csv  0_117_2.csv  0_133_1.csv  0_133_2.csv  0_150_1.csv  0_150_2.csv  0_165_1.csv  0_165_2.csv
3.Software/include/: example.hpp
3.Software/src/: example1.cpp  example2.c  hello_librealsense2.cpp  rs_capture.cpp  rs_color.cpp  rs_visualize.cpp  test_opengl.cpp
4.Sensor/3D Printer/: Untitled v1.stl
(+159 files in other folders)
