cmake_minimum_required(VERSION 3.10)

project(example)
add_executable(example example1.cpp)
find_package(NanoSVG REQUIRED)
find_package(glfw3 REQUIRED)
# link_directories("/opt/homebrew/lib")
link_directories(/usr/lib)
link_directories(/usr/lib32)
link_directories(/usr/local/lib)
include_directories("/opt/homebrew/include")
include_directories(/usr/include)
include_directories(/usr/local/include)
target_link_libraries(example NanoSVG::nanosvg NanoSVG::nanosvgrast glfw "-framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo")
